--- a/src/layouts/admin.scss
+++ b/src/layouts/admin.scss
@@ -14,6 +14,15 @@ body {
 }
 
 .admin-header {
+  .sel-finance {
+    height: 68px;
+    font-size: 25px;
+    color: #ADADAD;
+    font-weight: 400;
+    border: none;
+    padding-left: 20px;
+  }
+
   .header-bar {
     height: 68px;
     border-radius: 10px;
