--- a/src/pages/ERP/Finance/finance.scss
+++ b/src/pages/ERP/Finance/finance.scss
@@ -34,6 +34,7 @@
   line-height: 14.4px;
   background-color: white;
   color: #82567A;
+  cursor: pointer;
 }
 
 .tool-btn:hover {
@@ -75,13 +76,14 @@
   background-color: #d9d9d966;
 }
 
-select {
+.finance-table-select {
   height: 30px;
   border: 1px solid #82567A;
   border-radius: 5px;
   padding: 5px 10px;
   min-width: 120px;
-  margin-right: 15px;
+  margin-right: 7px;
+  margin-left: 7px;
 }
 
 .finance-add {
@@ -102,4 +104,40 @@ select {
 .small-font {
   font-size: 10px;
   color: #18020C4c;
+}
+
+.cancel-modal{
+  width: 20px;
+  height: 20px;
+  padding: 0 7px;
+  font-size: 12px;
+  background-color: #F24E1E;
+  color: white;
+  border-radius: 50%;
+  float: right;
+  cursor: pointer;
+}
+
+.finance-expense-form {
+
+}
+
+.finance-expense-form .expense-type {
+  width: 454px;
+  height: 50px;
+  padding: 10px 20px;
+  border: 1px solid #8B5E83;
+  border-radius: 10px;
+  margin-bottom: 16px;
+}
+.finance-expense-form .expense-action {
+  width: 454px;
+  height: 50px;
+  margin: auto;
+  display: block;
+  padding: 10px 20px;
+  border: 1px solid #8B5E83;
+  background-color: #8B5E83;
+  color: white;
+  border-radius: 10px;
 }
