--- a/src/pages/ERP/Finance/finance.scss
+++ b/src/pages/ERP/Finance/finance.scss
@@ -53,7 +53,22 @@
   justify-content: space-between;
 }
 
-.chart-container {
+.chart-container-1 {
+  background-color: white;
+  border-radius: 20px;
+  padding: 30px;
+  width: 100%;
+  height: 650px;
+}
+
+.chart-container-1-title {
+  margin-bottom: 30px;
+  font-size: 25px;
+  font-weight: 700;
+  color: #000000;
+}
+
+.chart-container-2 {
   background-color: white;
   border-radius: 20px;
   padding: 30px;
