--- a/src/layouts/admin.scss
+++ b/src/layouts/admin.scss
@@ -1,8 +1,3 @@
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
 
 body {
   background: #F2F2F2;
@@ -21,6 +16,7 @@ body {
     font-weight: 400;
     border: none;
     padding-left: 20px;
+    border-radius: 10px;
   }
 
   .header-bar {
