--- a/src/layouts/admin.scss
+++ b/src/layouts/admin.scss
@@ -1,4 +1,3 @@
-
 body {
   background: #F2F2F2;
   font-family: Lato;
@@ -9,8 +8,12 @@ body {
 }
 
 .admin-header {
+  width: calc(100vw - 308px);
+
   .sel-finance {
     height: 68px;
+    width: 280px;
+    margin-right: 100px;
     font-size: 25px;
     color: #ADADAD;
     font-weight: 400;
@@ -45,8 +48,8 @@ body {
       margin-right: 50px;
 
       input.header-search {
-        font-size: 12px;
-        padding: 3px 16px 3px 20px;
+        font-size: 14px;
+        padding: 0 16px 0 20px;
         outline: none !important;
       }
     }
@@ -78,7 +81,8 @@ body {
 }
 
 .content-wrapper {
-  margin-top: 30px;
+  margin-top: 68px;
+  padding-top: 30px;
 }
 
 .sidebar {
