fixed: inventory modals added

--- a/src/pages/ERP/Finance/finance.scss
+++ b/src/pages/ERP/Finance/finance.scss
@@ -130,7 +130,7 @@
 
 }
 
-.finance-expense-form .expense-type {
+.expense-type {
   width: 454px;
   height: 50px;
   padding: 10px 20px;
@@ -138,7 +138,7 @@
   border-radius: 10px;
   margin-bottom: 16px;
 }
-.finance-expense-form .expense-action {
+.expense-action {
   width: 454px;
   height: 50px;
   margin: auto;
