moved login dialog into center of screen

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -84,7 +84,7 @@
     @include size(400px, auto);
     @include flex(center, center, column);
 
-    margin: 0 auto;
+    margin: auto;
     background-color: white;
     box-shadow: $login-container-shadow;
     overflow: hidden;
