--- a/src/common.scss
+++ b/src/common.scss
@@ -37,13 +37,13 @@ body {
   width: 784px;
 }
 
-.Dropdown-control {
-  padding: 2px 20px 2px 5px !important;
-  font-size: 13px;
-  box-shadow: 0px 10px 24px rgba(70, 6, 81, 0.08);
-  border-radius: 5px;
-  border: 0.5px #82567A;
-}
+// .Dropdown-control {
+//   padding: 2px 20px 2px 5px !important;
+//   font-size: 13px;
+//   box-shadow: 0px 10px 24px rgba(70, 6, 81, 0.08);
+//   border-radius: 5px;
+//   border: 0.5px #82567A;
+// }
 
 .table-filter {
   .Dropdown-control {
