--- a/src/layouts/Header/dropdown.scss
+++ b/src/layouts/Header/dropdown.scss
@@ -45,7 +45,7 @@
     top: 100%;
     width: 100px;
     z-index: 1000;
-    -webkit-overflow-scrolling: touch;
+    // -webkit-overflow-scrolling: touch;
 
     .Dropdown-option {
       width: 50px;
