--- a/src/layouts/Header/dropdown.scss
+++ b/src/layouts/Header/dropdown.scss
@@ -39,7 +39,7 @@
   }
 
   .Dropdown-menu {
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+    // box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
     overflow-y: hidden;
     position: absolute;
     top: 100%;
