--- a/src/pages/ERP/Inventory/Modals/inventory-modal.scss
+++ b/src/pages/ERP/Inventory/Modals/inventory-modal.scss
@@ -1,4 +1,5 @@
 .modal {
+  width: 100%;
   .inventory-modal {
     width: 548px;
     margin-top: 50px;
@@ -49,5 +50,26 @@
       background-color: #82567A;
       color: white;
     }
+  }
+
+  .action-buttons {
+    width: 80%;
+    position: absolute;
+    top: 20px;
+    right: 10%;
+
+    .tool-btn {
+      float: right;
+    }
+  }
+  .finance-modal {
+    width: 80%;
+    margin-top: 70px;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 35px 35px 40px 50px;
+    background-color: white;
+    border-radius: 20px;
   }
 }
