--- a/src/components/ui/TableSearch/TableSearch.scss
+++ b/src/components/ui/TableSearch/TableSearch.scss
@@ -1,10 +1,15 @@
 .table-search {
   input {
-    height: 31px;
     display: block;
-    margin-left: 40px;
     background: rgba(217, 217, 217, 0.4);
     border-radius: 5px;
+    min-width: 260px;
+  }
+
+  .icon-search {
+    position: absolute;
+    top: 7px;
+    left: 9px;
   }
 
   input:focus {
