fixed finance/transaction-modal to common style

--- a/src/pages/ERP/Finance/finance.scss
+++ b/src/pages/ERP/Finance/finance.scss
@@ -78,7 +78,7 @@
 
 .table-container {
   margin: 15px 100px 30px 100px;
-  padding: 20px 35px;
+  padding: 30px 35px 20px;
   background-color: white;
 }
 
@@ -130,8 +130,6 @@
   cursor: pointer;
 }
 
-.finance-expense-form {}
-
 .expense-type {
   width: 454px;
   height: 50px;
@@ -151,4 +149,15 @@
   background-color: #8B5E83;
   color: white;
   border-radius: 10px;
+}
+
+.modal-transactions {
+  width: 80%;
+  background: transparent;
+  
+  .finance-table {
+    padding: 35px 35px 40px 50px;
+    background-color: white;
+    border-radius: 20px;
+  }
 }
