--- a/src/components/ui/TableSearch/TableSearch.scss
+++ b/src/components/ui/TableSearch/TableSearch.scss
@@ -6,6 +6,10 @@
     min-width: 260px;
   }
 
+  input.bordered {
+    border: solid 1px #82567A;
+  }
+
   .icon-search {
     position: absolute;
     top: 7px;
