--- a/src/pages/ERP/Finance/finance.scss
+++ b/src/pages/ERP/Finance/finance.scss
@@ -80,6 +80,7 @@
   margin: 15px 100px 30px 100px;
   padding: 30px 35px 20px;
   background-color: white;
+  border-radius: 20px;
 }
 
 
@@ -159,5 +160,16 @@
     padding: 25px 35px 25px 50px;
     background-color: white;
     border-radius: 20px;
+  }
+}
+
+.table-expenses {
+  thead > tr > th {
+    color: #82567A;
+    font-weight: normal;
+  }
+
+  tbody > tr > td {
+    padding-top: 7px;
   }
 }
