fixed modals, and some other fixes too

--- a/src/pages/ERP/Warehouse/warehouse.scss
+++ b/src/pages/ERP/Warehouse/warehouse.scss
@@ -67,7 +67,7 @@
         text-align: center;
 
 
-        .btn-edit-warehouse {
+        button {
           color: #82567A;
           font-size: 13px;
         }
