--- a/src/layouts/admin.scss
+++ b/src/layouts/admin.scss
@@ -4,11 +4,11 @@ body {
 }
 
 .admin-wrapper {
-  margin-left: 260px;
+  margin-left: 300px;
 }
 
 .admin-header {
-  width: calc(100vw - 308px);
+  width: calc(100vw - 357px);
 
   .sel-finance {
     height: 68px;
@@ -23,7 +23,7 @@ body {
   }
 
   .header-bar {
-    height: 68px;
+    height: 74px;
     border-radius: 10px;
 
     label {
@@ -72,13 +72,12 @@ body {
 }
 
 .content-wrapper {
-  margin-top: 68px;
+  // margin-top: 68px;
   padding-top: 30px;
-  overflow-y: auto;
 }
 
 .sidebar {
-  width: 260px;
+  width: 300px;
   border-radius: 10px;
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
@@ -88,25 +87,23 @@ body {
   float: left;
 
   .user-info {
-    height: 62px;
     border-radius: 6px;
     border-image: linear-gradient(#EAEBFF 0%, #895C81 19%);
-    padding: 13px 16px;
-    margin-bottom: 14px;
+    padding: 18px 20px;
+    margin-bottom: 20px;
   }
 
   .user-info img.user-avatar {
-    height: 36px;
-    width: 36px;
-    border-radius: 44px;
+    height: 40px;
+    width: 40px;
+    border-radius: 48px;
   }
 
   .user-info label.user-name {
     font-family: Lato;
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 16px;
     letter-spacing: 0.02rem;
     color: #0A0A1F;
     margin-left: 14px;
@@ -118,11 +115,10 @@ body {
     border-radius: 6px;
     display: block;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 14px;
     color: white;
     font-weight: 400;
     font-size: 14px;
-    line-height: 12px;
     letter-spacing: 0.01rem;
   }
 
@@ -131,13 +127,9 @@ body {
   }
 
   .second-buttons {
-    width: 228px;
     bottom: 100px;
 
     .second-button {
-      height: 44px;
-      width: 100%;
-      display: block;
       font-size: 14px;
       border-radius: 6px;
       margin-bottom: 10px;
