--- a/src/common.scss
+++ b/src/common.scss
@@ -112,3 +112,31 @@ textarea {
 button:focus-visible {
   outline: none;
 }
+
+.common-button {
+  border: solid 1px #8A5D82;
+  width: 228px;
+  height: 44px;
+  filter: drop-shadow(0px 20px 24px rgba(70, 6, 81, 0.08));
+  border-radius: 6px;
+  color: #8A5D82;
+}
+
+.buttons {
+  border-radius: 20px;
+  padding: 60px 70px;
+
+  .common-button {
+    margin-bottom: 30px;
+  }
+
+  .common-button:last-child {
+    margin-bottom: 0;
+  }
+
+  .common-button:hover {
+    background: linear-gradient(180deg, #8B5E83 20.45%, #82567A 100%, #82567A 100%);
+    box-shadow: 0px 20px 24px rgba(70, 6, 81, 0.08);
+    color: white;
+  }
+}
