--- a/src/layouts/admin.scss
+++ b/src/layouts/admin.scss
@@ -11,8 +11,8 @@ body {
   width: calc(100vw - 357px);
 
   .sel-finance {
-    height: 68px;
-    width: 280px;
+    height: 74px;
+    width: 380px;
     margin-right: 100px;
     font-size: 25px;
     color: #ADADAD;
@@ -73,6 +73,7 @@ body {
 
 .content-wrapper {
   // margin-top: 68px;
+  overflow: auto;
   padding-top: 30px;
 }
 
@@ -145,22 +146,6 @@ body {
       color: #FD3838;
     }
   }
-}
-
-.common-button {
-  border: solid 1px #8A5D82;
-  width: 228px;
-  height: 44px;
-  filter: drop-shadow(0px 20px 24px rgba(70, 6, 81, 0.08));
-  border-radius: 6px;
-  color: #8A5D82;
-  margin-bottom: 30px;
-}
-
-.common-button:hover {
-  background: linear-gradient(180deg, #8B5E83 20.45%, #82567A 100%, #82567A 100%);
-  box-shadow: 0px 20px 24px rgba(70, 6, 81, 0.08);
-  color: white;
 }
 
 .my-gray {
