implemeted loading label

--- a/src/components/ui/ERP/Project/Components/Calendar/Calendar.scss
+++ b/src/components/ui/ERP/Project/Components/Calendar/Calendar.scss
@@ -29,6 +29,7 @@
         padding: 8px;
 
         span {
+          font-weight: 700;
           display: block;
           height: 30px;
           width: 34px;
