--- a/src/common.scss
+++ b/src/common.scss
@@ -122,6 +122,12 @@ button:focus-visible {
   color: #8A5D82;
 }
 
+.common-button:hover {
+  background: linear-gradient(180deg, #8B5E83 20.45%, #82567A 100%, #82567A 100%);
+  box-shadow: 0px 20px 24px rgba(70, 6, 81, 0.08);
+  color: white;
+}
+
 .buttons {
   border-radius: 20px;
   padding: 60px 70px;
@@ -133,10 +139,16 @@ button:focus-visible {
   .common-button:last-child {
     margin-bottom: 0;
   }
+}
 
-  .common-button:hover {
-    background: linear-gradient(180deg, #8B5E83 20.45%, #82567A 100%, #82567A 100%);
-    box-shadow: 0px 20px 24px rgba(70, 6, 81, 0.08);
-    color: white;
-  }
+.color-p {
+  color: #82567A;
+}
+
+.color-g {
+  color: #08BA73;
+}
+
+.color-delete {
+  color: #F24E1E;
 }
